<resources>
    <string name="app_name">Caller\'s Clock</string>

    <string name="new_dance">New</string>
    <string name="waltz">Waltz</string>
    <string name="break_str">Break</string>

    <string name="no_dance">No Dance</string>
    <string name="start_dance">Start Dance</string>
    <string name="cancel">Cancel</string>
    <string name="end_dance">End Dance</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>

    <string name="action_fullscreen">Fullscreen</string>
    <string name="action_settings">Settings</string>


    <string-array name="type_list">
        <item>Contra</item>
        <item>Square</item>
        <item>Waltz</item>
        <item>Couples</item>
        <item>Break</item>
        <item>Workshop</item>
    </string-array>
</resources>
